--- a/index.html
+++ b/index.html
@@ -8,12 +8,14 @@
         <meta name="My-Portfolio">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl" crossorigin="anonymous">
+        <link rel="preconnect" href="https://fonts.gstatic.com">
+<link href="https://fonts.googleapis.com/css2?family=Quicksand&display=swap" rel="stylesheet">
         <link rel="stylesheet" href="./assets/style.css">
     </head>
    
-      <nav class="navbar navbar-expand-lg navbar-light bg-light">
+      <nav class="navbar navbar-expand-lg navbar-light bg-light" style="font-family:'Quicksand', sans-serif;">
         <a class="navbar-brand"
-          style="color: white; background-color: rgb(30, 8, 153); font-size: 32px; font-family: 'DM Serif Text', serif; margin-left:16px ">Jonathan
+          style="color: white; background-color: rgb(30, 8, 153); font-size: 32px; margin-left:25px ">Jonathan
           Rein</a>
   
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
@@ -24,7 +26,7 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav">
                 <li class="nav-item">
-                  <a class="nav-link active" aria-current="page" href="#">About Me</a>
+                  <a class="nav-link" href="#">About Me</a>
                 </li>
                 <li class="nav-item">
                   <a class="nav-link" href="#">Work</a>
@@ -39,31 +41,62 @@
         </div>
       </nav>
 
-      <body>
-        <div class="container ml-3 mt-5">
-          <div class="row">
-            <div class="col-md-9">
-              <div class="jumbotron bg-white">
-                <h1 style="color: rgb(18, 167, 167); font-size: 36px; font-family: 'DM Serif Text', serif;">About Me</h1>
-                <!--creates gray line-->
-                <hr class="my-4" />
-                <!--container for images-->
-                <div class="container">
-                  <!--row 1-->
-                  <div class="row">
-                    <div class="col-sm-12 col-md-6 col-lg-6">
-                      <img src="assets\Family2.png" class="images" alt="amelia">
+      <body style="background-color: rgb(228, 220, 220); font-family:'Quicksand', sans-serif;">
+        <!-- Replace background color with pattern. -->
+                    <div class="container" style="margin-left: 15px;">
+                      <!--row 1-->
+                        <div class="row">
+                            <div class="col-md-2" >
+                                <h3>About Me</h3>
+                            </div>
+                            <div class="col-md-10">
+                                <img src="assets\Family2.png" class="images" alt="fill picture">
+                            </div>
+                        </div>
+                    <!--row 2-->
+                    <div class="row">
+                        <div class="col-md-2">
+                          <h3>Work</h3>
+                        </div>
+                        <div class="col-md-5">
+                          <img src="assets\Family2.png" class="images" alt="jack">
+                        </div>
+                        <div class="col-md-5">
+                            <img src="assets\Family2.png" class="images" alt="jack">
+                          </div>
+                      </div>
+                      <!--row 3-->
+                      <div class="row">
+                        <div class="col-md-2">
+                        </div>
+                        <div class="col-md-5">
+                          <img src="assets\Family2.png" class="images" alt="jack">
+                        </div>
+                        <div class="col-md-5">
+                            <img src="assets\Family2.png" class="images" alt="jack">
+                          </div>
+                      </div>
+                      <!--row 4-->
+                      <div class="row">
+                        <div class="col-md-2">
+                          <h3>Contact</h3>
+                        </div>
+                        <div class="col-md-3">
+                            <h4>404-667-3545</h4>
+                        </div>
+                        <div class="col-md-4">
+                            <h4>jrein1296@gmail.com</h4>
+                        </div>
+                        <div class="col-md-3">
+                            <a href="https://github.com/Xr7TSi"><h4>GitHub</h4></a>
+                        </div>
+                      </div>
                     </div>
-                    <div class="col-sm-12 col-md-6 col-lg-6">
-                      <img src="assets\Family2.png" class="images" alt="jack">
-                    </div>
-                  </div>
-                    </div>
-                  </div>
-                </div>
-              </div>
-            </div>
-          </div>
+             
+
+          
+
+
       </body>
 
 
