--- a/index.html
+++ b/index.html
@@ -15,10 +15,11 @@
    
       <nav class="navbar navbar-expand-lg navbar-light bg-light" style="font-family:'Quicksand', sans-serif;">
         <a class="navbar-brand"
-          style="color: white; background-color: rgb(30, 8, 153); font-size: 32px; margin-left:25px ">Jonathan
-          Rein</a>
+          style="color: white; background-color: rgb(30, 8, 153); font-size: 32px; margin-left:25px ">Jonathan Rein</a>
+
+
   
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
+          <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
           aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
@@ -26,58 +27,64 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav">
                 <li class="nav-item">
-                  <a class="nav-link" href="#">About Me</a>
+                  <a class="nav-link" href="#about-me">About Me</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="#">Work</a>
+                  <a class="nav-link" href="#work">Work</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="#">Contact Me</a>
+                  <a class="nav-link" href="#contact-me">Contact Me</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="#">Resume</a>
+                  <a class="nav-link" href="#resume">Resume</a>
                 </li>
               </ul>
         </div>
       </nav>
 
+
+      
+
       <body style="background-color: rgb(228, 220, 220); font-family:'Quicksand', sans-serif;">
         <!-- Replace background color with pattern. -->
                     <div class="container" style="margin-left: 15px;">
                       <!--row 1-->
-                        <div class="row">
+                        <div id="about-me" class="row">
                             <div class="col-md-2" >
                                 <h3>About Me</h3>
                             </div>
-                            <div class="col-md-10">
+                                <div class="col-md-5" >
+                                    <h5>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Consequuntur nam neque odit esse ratione excepturi fugit quod vitae numquam, nesciunt dolor, ducimus hic ad et quis architecto. Pariatur, reiciendis tempora?</h5>
+                                </div>
+                            <div class="col-md-5">
                                 <img src="assets\Family2.png" class="images" alt="fill picture">
                             </div>
                         </div>
                     <!--row 2-->
-                    <div class="row">
+                    <div  id="work" class="row">
                         <div class="col-md-2">
                           <h3>Work</h3>
                         </div>
-                        <div class="col-md-5">
-                          <img src="assets\Family2.png" class="images" alt="jack">
+                        <div class="col-md-10">
+                          <img src="assets\Family2.png" class="images" alt="fill picture">
+                          <h5>Work title 1</h5>
                         </div>
-                        <div class="col-md-5">
-                            <img src="assets\Family2.png" class="images" alt="jack">
-                          </div>
                       </div>
                       <!--row 3-->
                       <div class="row">
                         <div class="col-md-2">
                         </div>
                         <div class="col-md-5">
-                          <img src="assets\Family2.png" class="images" alt="jack">
+                          <img src="assets\Family2.png" class="images" alt="fill picture">
+                          <h5>Work title 2</h5>
                         </div>
                         <div class="col-md-5">
-                            <img src="assets\Family2.png" class="images" alt="jack">
+                            <img src="assets\Family2.png" class="images" alt="fill picture">
+                            <h5>Work title 3</h5>
                           </div>
                       </div>
                       <!--row 4-->
-                      <div class="row">
+                      <div  id="contact-me" class="row">
                         <div class="col-md-2">
                           <h3>Contact</h3>
                         </div>
