Resize of work image 1

--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
                           <h3>Work</h3>
                         </div>
                         <div class="col-md-10">
-                          <img src="assets\Family2.png" class="images" alt="fill picture">
+                          <img src="assets\BloodMountainSummitWide.jpg" class="images" alt="fill picture">
                           <h5>Work title 1</h5>
                         </div>
                       </div>
