--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
         </div>
       </nav>
 
-
+<!-- https://xr7tsi.github.io/Horiseon-Refactor/ -->
       
 
       <body style="background-color: rgb(228, 220, 220); font-family:'Quicksand', sans-serif;">
@@ -66,7 +66,9 @@
                           <h3>Work</h3>
                         </div>
                         <div class="col-md-10">
+                          <a href="https://xr7tsi.github.io/Horiseon-Refactor/">
                           <img src="assets\BloodMountainSummitWide.jpg" class="images" alt="fill picture">
+                        </a>
                           <h5>Work title 1</h5>
                         </div>
                       </div>
@@ -74,12 +76,16 @@
                       <div class="row">
                         <div class="col-md-2">
                         </div>
-                        <div class="col-md-5">
-                          <img src="assets\Family2.png" class="images" alt="fill picture">
-                          <h5>Work title 2</h5>
+                          <div class="col-md-5">
+                           <a href="https://xr7tsi.github.io/Horiseon-Refactor/">
+                            <img src="assets\Family2.png" class="images" alt="fill picture">
+                          </a>
+                            <h5>Work title 2</h5>
                         </div>
                         <div class="col-md-5">
+                          <a href="https://xr7tsi.github.io/Horiseon-Refactor/">
                             <img src="assets\Family2.png" class="images" alt="fill picture">
+                          </a>
                             <h5>Work title 3</h5>
                           </div>
                       </div>
