--- a/index.html
+++ b/index.html
@@ -50,12 +50,13 @@
                             </div>
                                 <div class="col-md-5" >
                                     <h5>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Consequuntur nam neque odit esse ratione excepturi fugit quod vitae numquam, nesciunt dolor, ducimus hic ad et quis architecto. Pariatur, reiciendis tempora?</h5>
-                                </div>
+                                    <h5>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Consequuntur nam neque odit esse ratione excepturi fugit quod vitae numquam, nesciunt dolor, ducimus hic ad et quis architecto. Pariatur, reiciendis tempora?</h5>
+                                  </div>
                             <div class="col-md-5">
                                 <img src="assets\Family2.png" class="images" alt="fill picture">
                             </div>
                         </div>
-                    </div>    
+                        
                     <!--row 2-->
                     <div  id="work" class="row">
                         <div class="col-md-2">
@@ -85,7 +86,7 @@
                             <h5>Work title 3</h5>
                           </div>
                       </div>
-      
+                    </div>
       <nav class="navbar navbar-expand-lg navbar-light bg-light" style="font-family:'Quicksand', sans-serif;">
         <a class="navbar-brand"
           style="color: white; background-color: rgb(30, 8, 153); font-size: 32px; margin-left:25px ">Contact</a>
