Updating images to match links.

--- a/index.html
+++ b/index.html
@@ -53,6 +53,7 @@
                                     <h5>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Consequuntur nam neque odit esse ratione excepturi fugit quod vitae numquam, nesciunt dolor, ducimus hic ad et quis architecto. Pariatur, reiciendis tempora?</h5>
                                   </div>
                             <div class="col-md-5">
+                              <!-- img size 350x350 -->
                                 <img src="assets\Family2.png" class="images" alt="fill picture">
                             </div>
                         </div>
@@ -64,7 +65,8 @@
                         </div>
                         <div class="col-md-10">
                           <a href="https://xr7tsi.github.io/Horiseon-Refactor/">
-                            <img src="assets\BloodMountainSummitWide.jpg" class="images" alt="fill picture">
+                            <!-- img size 900 x 350 -->
+                            <img src="assets\hori900x350.png" class="images" alt="fill picture">
                           </a>
                           <h5>Work title 1</h5>
                         </div>
@@ -75,13 +77,13 @@
                         </div>
                           <div class="col-md-5">
                             <a href="https://xr7tsi.github.io/Horiseon-Refactor/">
-                              <img src="assets\Family2.png" class="images" alt="fill picture">
+                              <img src="assets\hori350x350.png" class="images" alt="fill picture">
                             </a>
                             <h5>Work title 2</h5>
                         </div>
                           <div class="col-md-5">
                             <a href="https://xr7tsi.github.io/Horiseon-Refactor/">
-                              <img src="assets\Family2.png" class="images" alt="fill picture">
+                              <img src="assets\hori350x350.png" class="images" alt="fill picture">
                             </a>
                             <h5>Work title 3</h5>
                           </div>
