Adding row 4 content.

--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
                             <!-- img size 900 x 350 -->
                             <img src="assets\hori900x350.png" class="images" alt="fill picture">
                           </a>
-                          <h5>Work title 1</h5>
+                          <h5>Horizeon Refactor</h5>
                         </div>
                       </div>
                       <!--row 3-->
@@ -79,13 +79,30 @@
                             <a href="https://xr7tsi.github.io/Horiseon-Refactor/">
                               <img src="assets\hori350x350.png" class="images" alt="fill picture">
                             </a>
-                            <h5>Work title 2</h5>
+                            <h5>Horizeon Refactor</h5>
                         </div>
                           <div class="col-md-5">
                             <a href="https://xr7tsi.github.io/Horiseon-Refactor/">
                               <img src="assets\hori350x350.png" class="images" alt="fill picture">
                             </a>
-                            <h5>Work title 3</h5>
+                            <h5>Horizeon Refactor</h5>
+                          </div>
+                      </div>
+                      <!-- row 4 -->
+                      <div class="row">
+                        <div class="col-md-2">
+                        </div>
+                          <div class="col-md-5">
+                            <a href="https://xr7tsi.github.io/Horiseon-Refactor/">
+                              <img src="assets\hori350x350.png" class="images" alt="fill picture">
+                            </a>
+                            <h5>Horizeon Refactor</h5>
+                        </div>
+                          <div class="col-md-5">
+                            <a href="https://xr7tsi.github.io/Horiseon-Refactor/">
+                              <img src="assets\hori350x350.png" class="images" alt="fill picture">
+                            </a>
+                            <h5>Horizeon Refactor</h5>
                           </div>
                       </div>
                     </div>
