Adding semantic elements.

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
               </ul>
         </div>
       </nav>
-
+    <content>
       <body style="background-color: rgb(228, 220, 220); font-family:'Quicksand', sans-serif;">
         <!-- Replace background color with pattern. -->
                     <div class="container" style="margin-left: 15px;">
@@ -54,7 +54,7 @@
                                   </div>
                             <div class="col-md-5">
                               <!-- img size 350x350 -->
-                                <img src="assets\Family2.png" class="images" alt="fill picture">
+                                <img src="assets\Family2.png" class="images" alt="family picture">
                             </div>
                         </div>
                         
@@ -66,7 +66,7 @@
                         <div class="col-md-10">
                           <a href="https://xr7tsi.github.io/Horiseon-Refactor/">
                             <!-- img size 900 x 350 -->
-                            <img src="assets\hori900x350.png" class="images" alt="fill picture">
+                            <img src="assets\hori900x350.png" class="images" alt="Horiseon website image">
                           </a>
                           <h5>Horizeon Refactor</h5>
                         </div>
@@ -77,13 +77,13 @@
                         </div>
                           <div class="col-md-5">
                             <a href="https://xr7tsi.github.io/Horiseon-Refactor/">
-                              <img src="assets\hori350x350.png" class="images" alt="fill picture">
+                              <img src="assets\hori350x350.png" class="images" alt="Horiseon website image">
                             </a>
                             <h5>Horizeon Refactor</h5>
                         </div>
                           <div class="col-md-5">
                             <a href="https://xr7tsi.github.io/Horiseon-Refactor/">
-                              <img src="assets\hori350x350.png" class="images" alt="fill picture">
+                              <img src="assets\hori350x350.png" class="images" alt="Horison website image">
                             </a>
                             <h5>Horizeon Refactor</h5>
                           </div>
@@ -106,6 +106,10 @@
                           </div>
                       </div>
                     </div>
+                  </body>
+    </content>
+
+    <footer>
       <nav class="navbar navbar-expand-lg navbar-light bg-light" style="font-family:'Quicksand', sans-serif;">
         <a class="navbar-brand"
           style="color: white; background-color: rgb(30, 8, 153); font-size: 32px; margin-left:25px ">Contact</a>
@@ -136,5 +140,5 @@
           </div>
       </div>
       </nav>
-      </body>    
+    </footer>   
 </html>
