Removing resume link from navbar.

--- a/index.html
+++ b/index.html
@@ -33,12 +33,10 @@
                 <li class="nav-item">
                   <a class="nav-link" href="#contact-me">Contact Me</a>
                 </li>
-                <li class="nav-item">
-                  <a class="nav-link" href="#resume">Resume</a>
-                </li>
               </ul>
         </div>
       </nav>
+      
     <content>
       <body style="background-color: rgb(228, 220, 220); font-family:'Quicksand', sans-serif;">
         <!-- Replace background color with pattern. -->
@@ -57,8 +55,7 @@
                                 <img src="assets\Family2.png" class="images" alt="family picture">
                             </div>
                         </div>
-                        
-                    <!--row 2-->
+                      <!--row 2-->
                     <div  id="work" class="row">
                         <div class="col-md-2">
                           <h3>Work</h3>
@@ -76,12 +73,14 @@
                         <div class="col-md-2">
                         </div>
                           <div class="col-md-5">
+                            <!-- img size 350x350 -->
                             <a href="https://xr7tsi.github.io/Horiseon-Refactor/">
                               <img src="assets\hori350x350.png" class="images" alt="Horiseon website image">
                             </a>
                             <h5>Horizeon Refactor</h5>
                         </div>
                           <div class="col-md-5">
+                            <!-- img size 350x350 -->
                             <a href="https://xr7tsi.github.io/Horiseon-Refactor/">
                               <img src="assets\hori350x350.png" class="images" alt="Horison website image">
                             </a>
