--- a/2indexsandbox.html
+++ b/2indexsandbox.html
@@ -10,7 +10,7 @@
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl" crossorigin="anonymous">
         <link rel="preconnect" href="https://fonts.gstatic.com">
 <link href="https://fonts.googleapis.com/css2?family=Quicksand&display=swap" rel="stylesheet">
-        <link rel="stylesheet" href="./assets/style.css">
+        <link rel="stylesheet" href="assets\2style.sandbox.css">
     </head>
    
       <nav class="navbar navbar-expand-lg navbar-light bg-light" style="font-family:'Quicksand', sans-serif;">
@@ -64,8 +64,8 @@
                           <a href="https://xr7tsi.github.io/Horiseon-Refactor/">
                             <!-- img size 900 x 350 -->
                             <img src="assets\hori900x350.png" class="images" alt="Horiseon website image">
+                          <h5>Horizeon Refactor</h5>
                           </a>
-                           <h5>Horizeon Refactor</h5>
                         </div>
                       </div>
                       <!--row 3-->
