--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
           <div class="collapse navbar-collapse" id="navbarSupportedContent">
               <ul class="navbar-nav">
                   <li class="nav-item">
-                    <a class="nav-link" </a><h5>404-667-3545</h5></a>
+                    <a class="nav-link"><h5>404-667-3545</h5></a>
                   </li>
                   <li class="nav-item">
                     <a class="nav-link" href="mailto: jrein1296@gmail.com"><h5>jrein1296@gmail.com</h5></a>
