--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 	<title>Jonathan Rein Portfolio</title>
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
   <link href="https://fonts.googleapis.com/css2?family=Quicksand&display=swap" rel="stylesheet">
-  <link rel="stylesheet" href="./assets/style.css">
+  <link rel="stylesheet" href="styles.css">
 </head>
  
 <nav class="navbar navbar-default">
