Adding space between 1st and 2nd rows.

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 	<script src="http://code.jquery.com/jquery-2.1.1.min.js"></script>
 	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/js/bootstrap.min.js"></script>
 
-  <content>
+  <content style="margin-top 10px">
     <body style="background-color: rgb(228, 220, 220); font-family:'Quicksand', sans-serif;">
                   <div class="container" style="margin-left: 15px;">
                     <!--row 1-->
