--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 
-<html>
+
 
 <head>
     <meta charset="utf-8">
@@ -40,7 +40,7 @@
 	<script src="http://code.jquery.com/jquery-2.1.1.min.js"></script>
 	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/js/bootstrap.min.js"></script>
 
-  <content style="margin-top 10px">
+  <content style="margin-top:10px">
     <body style="background-color: rgb(228, 220, 220); font-family:'Quicksand', sans-serif;">
                   <div class="container" style="margin-left: 15px;">
                     <!--row 1-->
@@ -138,6 +138,6 @@
         </ul>
       </div>
     </div>       
-  <footer>
+  </footer>
 
 </html>
