Adding images and links to recent work.

--- a/index.html
+++ b/index.html
@@ -1,8 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
 
-
-
 <head>
     <meta charset="utf-8">
 	<title>Jonathan Rein Portfolio</title>
@@ -12,115 +10,105 @@
 </head>
  
 <nav class="navbar navbar-default">
-        <div class="navbar-header" >
-          <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar-collapse-1">
-            <span class="sr-only"></span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-          </button>
-          <a class="navbar-brand" style="color: white; background-color: rgb(30, 8, 153); font-size: 32px; margin-left: 25px" >Jonathan Rein</a>
-        </div>
-        
-        <div class="collapse navbar-collapse" id="navbar-collapse-1">
-          <ul class="nav navbar-nav navbar-right">
-            <li class="nav-item">
-              <a class="nav-link" href="#about-me">About Me</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#work">Work</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#contact-me">Contact Me</a>
-            </li> 
-          </ul>
-        </div>       
-    </nav>
+  <div class="navbar-header" >
+    <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar-collapse-1">
+      <span class="sr-only"></span>
+      <span class="icon-bar"></span>
+      <span class="icon-bar"></span>
+      <span class="icon-bar"></span>
+    </button>
+    <a class="navbar-brand" style="color: white; background-color: rgb(30, 8, 153); font-size: 32px; margin-left: 25px" >Jonathan Rein</a>
+  </div>
   
-	<script src="http://code.jquery.com/jquery-2.1.1.min.js"></script>
-	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/js/bootstrap.min.js"></script>
-
-  <content style="margin-top:10px">
-    <body style="background-color: rgb(228, 220, 220); font-family:'Quicksand', sans-serif;">
-                  <div class="container" style="margin-left: 15px;">
-                    <!--row 1-->
-                      <div id="about-me" class="row">
-                          <div class="col-md-2" >
-                              <h3>About Me</h3>
-                          </div>
-                              <div class="col-md-5" >
-                                  <h5>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Consequuntur nam neque odit esse ratione excepturi fugit quod vitae numquam, nesciunt dolor, ducimus hic ad et quis architecto. Pariatur, reiciendis tempora?</h5>
-                                  <h5>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Consequuntur nam neque odit esse ratione excepturi fugit quod vitae numquam, nesciunt dolor, ducimus hic ad et quis architecto. Pariatur, reiciendis tempora?</h5>
-                                </div>
-                          <div class="col-md-5">
-                            <!-- img size 350x350 -->
-                              <img src="assets\Family2.png" class="images" alt="family picture">
-                          </div>
-                      </div>
-                    <!--row 2-->
-                  <div  id="work" class="row">
-                      <div class="col-md-2">
-                        <h3>Work</h3>
-                      </div>
-                      <div class="col-md-10">
-                        <a href="https://xr7tsi.github.io/Horiseon-Refactor/">
-                          <!-- img size 900 x 350 -->
-                          <img src="assets\hori900x350.png" class="images" alt="Horiseon website image">
-                        </a>
-                         <h5>Horizeon Refactor</h5>
-                      </div>
-                    </div>
-                    <!--row 3-->
-                    <div class="row">
-                      <div class="col-md-2">
-                      </div>
-                        <div class="col-md-5">
-                          <!-- img size 350x350 -->
-                          <a href="https://xr7tsi.github.io/Horiseon-Refactor/">
-                            <img src="assets\hori350x350.png" class="images" alt="Horiseon website image">
-                          </a>
-                          <h5>Horizeon Refactor</h5>
-                      </div>
-                        <div class="col-md-5">
-                          <!-- img size 350x350 -->
-                          <a href="https://xr7tsi.github.io/Horiseon-Refactor/">
-                            <img src="assets\hori350x350.png" class="images" alt="Horison website image">
-                          </a>
-                          <h5>Horizeon Refactor</h5>
-                        </div>
-                    </div>
-                    <!-- row 4 -->
-                    <div class="row">
-                      <div class="col-md-2">
-                      </div>
-                        <div class="col-md-5">
-                          <a href="https://xr7tsi.github.io/Horiseon-Refactor/">
-                            <img src="assets\hori350x350.png" class="images" alt="fill picture">
-                          </a>
-                          <h5>Horizeon Refactor</h5>
-                      </div>
-                        <div class="col-md-5">
-                          <a href="https://xr7tsi.github.io/Horiseon-Refactor/">
-                            <img src="assets\hori350x350.png" class="images" alt="fill picture">
-                          </a>
-                          <h5>Horizeon Refactor</h5>
-                        </div>
-                    </div>
-                  </div>
-                </body>
-  </content>
-
-    <footer class="navbar navbar-default">
-      <div class="navbar-header" >
-        <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar-collapse-1">
-          <span class="sr-only"></span>
-          <span class="icon-bar"></span>
-          <span class="icon-bar"></span>
-          <span class="icon-bar"></span>
-        </button>
-        <a class="navbar-brand" style="color: white; background-color: rgb(30, 8, 153); font-size: 32px; margin-left: 25px" >Contact</a>
+  <div class="collapse navbar-collapse" id="navbar-collapse-1">
+    <ul class="nav navbar-nav navbar-right">
+      <li class="nav-item">
+        <a class="nav-link" href="#about-me">About Me</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="#work">Work</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="#contact-me">Contact Me</a>
+      </li> 
+    </ul>
+  </div>       
+</nav>
+  
+<content style="margin-top:10px">
+  <body style="background-color: rgb(228, 220, 220); font-family:'Quicksand', sans-serif;">
+    <div class="container" style="margin-left: 15px;">
+      <!--row 1-->
+      <div id="about-me" class="row">
+          <div class="col-md-2" >
+              <h3>About Me</h3>
+          </div>
+              <div class="col-md-5" >
+                  <h5>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Consequuntur nam neque odit esse ratione excepturi fugit quod vitae numquam, nesciunt dolor, ducimus hic ad et quis architecto. Pariatur, reiciendis tempora?</h5>
+                  <h5>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Consequuntur nam neque odit esse ratione excepturi fugit quod vitae numquam, nesciunt dolor, ducimus hic ad et quis architecto. Pariatur, reiciendis tempora?</h5>
+                </div>
+          <div class="col-md-5">
+            <!-- img size 350x350 -->
+              <img src="assets\Family2.png" class="images" alt="family picture">
+          </div>
       </div>
-      <div id="contact-me">
+      <!--row 2-->
+    <div  id="work" class="row">
+        <div class="col-md-2">
+          <h3>Work</h3>
+        </div>
+    </div>
+      <!--row 3-->
+      <div class="row">
+        <div class="col-md-2">
+        </div>
+          <div class="col-md-5">
+            <!-- img size 350x350 -->
+            <a href="https://xr7tsi.github.io/News-Flash/">
+              <img src="assets\News-Flash-350x.png" class="images" alt="NewsFlash website image">
+            </a>
+            <h5>Horizeon Refactor</h5>
+        </div>
+          <div class="col-md-5">
+            <!-- img size 350x350 -->
+            <a href="https://xr7tsi.github.io/Weather-Dashboard/">
+              <img src="assets\Weather-Dashboard-Resize-350x.png" class="images" alt="Weather Dashboard website image">
+            </a>
+            <h5>Horizeon Refactor</h5>
+          </div>
+      </div>
+      <!-- row 4 -->
+      <div class="row">
+        <div class="col-md-2">
+        </div>
+          <div class="col-md-5">
+            <a href="https://xr7tsi.github.io/Work-Day-Scheduler/">
+              <img src="assets\Work-Day-Scheduler-Resize-350x.png" class="images" alt="WorkDay Scheduler website image">
+            </a>
+            <h5>Horizeon Refactor</h5>
+        </div>
+          <div class="col-md-5">
+            <a href="https://xr7tsi.github.io/Password-Generator/">
+              <img src="assets\Password-Generator-Resize-350x.png" class="images" alt="Password Generator website image">
+            </a>
+            <h5>Horizeon Refactor</h5>
+          </div>
+      </div>
+    </div>
+  </body>
+</content>
+
+  <footer class="navbar navbar-default">
+    <div class="navbar-header" >
+      <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar-collapse-1">
+        <span class="sr-only"></span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+      </button>
+      <a class="navbar-brand" style="color: white; background-color: rgb(30, 8, 153); font-size: 32px; margin-left: 25px" >Contact</a>
+    </div>
+    <div id="contact-me">
       <div class="collapse navbar-collapse" id="navbar-collapse-1">
         <ul class="nav navbar-nav navbar-right">
         <li class="nav-item">
