--- a/index.html
+++ b/index.html
@@ -4,13 +4,16 @@
 <head>
     <meta charset="utf-8">
 	<title>Jonathan Rein Portfolio</title>
+  <script src="code.jquery.com/jquery-3.3.1.min.js"></script>
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
+  <!-- JavaScript Bundle with Popper -->
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/js/bootstrap.bundle.min.js" integrity="sha384-JEW9xMcG8R+pH31jmWH6WWP0WintQrMb4s7ZOdauHnUtxwoG2vI5DkLtS3qm9Ekf" crossorigin="anonymous"></script>
   <link href="https://fonts.googleapis.com/css2?family=Quicksand&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="styles.css">
 </head>
  
-<nav class="navbar navbar-default">
-  <div class="navbar-header" >
+<nav class="navbar navbar-default sticky-top">
+  <div class="navbar-header">
     <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar-collapse-1">
       <span class="sr-only"></span>
       <span class="icon-bar"></span>
@@ -29,7 +32,7 @@
         <a class="nav-link" href="#work">Work</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="#contact-me">Contact Me</a>
+        <a class="nav-link" href="#contact-me">Contact</a>
       </li> 
     </ul>
   </div>       
@@ -67,14 +70,14 @@
             <a href="https://xr7tsi.github.io/News-Flash/">
               <img src="assets\News-Flash-350x.png" class="images" alt="NewsFlash website image">
             </a>
-            <h5>Horizeon Refactor</h5>
+            <h5>News Flash</h5>
         </div>
           <div class="col-md-5">
             <!-- img size 350x350 -->
             <a href="https://xr7tsi.github.io/Weather-Dashboard/">
               <img src="assets\Weather-Dashboard-Resize-350x.png" class="images" alt="Weather Dashboard website image">
             </a>
-            <h5>Horizeon Refactor</h5>
+            <h5>Weather Dashboard</h5>
           </div>
       </div>
       <!-- row 4 -->
@@ -85,21 +88,21 @@
             <a href="https://xr7tsi.github.io/Work-Day-Scheduler/">
               <img src="assets\Work-Day-Scheduler-Resize-350x.png" class="images" alt="WorkDay Scheduler website image">
             </a>
-            <h5>Horizeon Refactor</h5>
+            <h5>Work Day Scheduler</h5>
         </div>
           <div class="col-md-5">
             <a href="https://xr7tsi.github.io/Password-Generator/">
               <img src="assets\Password-Generator-Resize-350x.png" class="images" alt="Password Generator website image">
             </a>
-            <h5>Horizeon Refactor</h5>
+            <h5>Password Generator</h5>
           </div>
       </div>
     </div>
   </body>
 </content>
 
-  <footer class="navbar navbar-default">
-    <div class="navbar-header" >
+  <!-- <footer class="navbar navbar-default"> -->
+    <!-- <div class="navbar-header" >
       <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar-collapse-1">
         <span class="sr-only"></span>
         <span class="icon-bar"></span>
@@ -126,6 +129,7 @@
         </ul>
       </div>
     </div>       
-  </footer>
+  </footer> -->
 
 </html>
+
