--- a/index.html
+++ b/index.html
@@ -104,9 +104,9 @@
   </body>
 </content>
 
-  <!-- <footer class="navbar navbar-default"> -->
-    <!-- <div class="navbar-header" >
-      <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar-collapse-1">
+  <footer class="navbar navbar-default">
+    <div class="navbar-header">
+      <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar-collapse-2">
         <span class="sr-only"></span>
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
@@ -115,7 +115,7 @@
       <a class="navbar-brand" style="color: white; background-color: rgb(30, 8, 153); font-size: 32px; margin-left: 25px" >Contact</a>
     </div>
     <div id="contact-me">
-      <div class="collapse navbar-collapse" id="navbar-collapse-1">
+      <div class="collapse navbar-collapse" id="navbar-collapse-2">
         <ul class="nav navbar-nav navbar-right">
         <li class="nav-item">
           <a class="nav-link" href="mailto: jrein1296@gmail.com"><h5>jrein1296@gmail.com</h5></a>
@@ -132,7 +132,7 @@
         </ul>
       </div>
     </div>       
-  </footer> -->
+  </footer>
 
 </html>
 
