--- a/index.html
+++ b/index.html
@@ -14,33 +14,34 @@
   <link rel="stylesheet" href="styles.css">
 </head>
 
+<header class="sticky-top">
+  <nav class="navbar navbar-default">
+    <div class="navbar-header">
+      <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar-collapse-1">
+        <span class="sr-only"></span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+      </button>
+      <a class="navbar-brand" style="color: white; background-color: rgb(30, 8, 153); font-size: 32px; margin-left: 25px" >Jonathan Rein</a>
+    </div>
 
-<nav class="navbar navbar-default sticky-top">
-  <div class="navbar-header">
-    <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar-collapse-1">
-      <span class="sr-only"></span>
-      <span class="icon-bar"></span>
-      <span class="icon-bar"></span>
-      <span class="icon-bar"></span>
-    </button>
-    <a class="navbar-brand" style="color: white; background-color: rgb(30, 8, 153); font-size: 32px; margin-left: 25px" >Jonathan Rein</a>
-  </div>
-  
-  <div class="collapse navbar-collapse" id="navbar-collapse-1">
-    <ul class="nav navbar-nav navbar-right">
-      <li class="nav-item">
-        <a class="nav-link" href="#about-me">About Me</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="#work">Work</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="#contact-me">Contact</a>
-      </li> 
-    </ul>
-  </div>       
-</nav>
-  
+    <div class="collapse navbar-collapse" id="navbar-collapse-1">
+      <ul class="nav navbar-nav navbar-right">
+        <li class="nav-item">
+          <a class="nav-link" href="#about-me">About Me</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="#work">Work</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="#contact-me">Contact</a>
+        </li> 
+      </ul>
+    </div>       
+  </nav>
+</header>
+
 <content style="margin-top:10px">
   <body style="background-color: rgb(228, 220, 220); font-family:'Quicksand', sans-serif;">
     <div class="container" style="margin-left: 15px;">
