Moving footer to coomplete bottom of page.

--- a/index.html
+++ b/index.html
@@ -6,7 +6,6 @@
 	<title>Jonathan Rein Portfolio</title>
   <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
-  <!-- JavaScript Bundle with Popper -->
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"
   integrity="sha384-aJ21OjlMXNL5UyIl/XNwTMqvzeRMZH2w8c5cRVpzpU8Y5bApTppSuUkhZXN0VxHd"
   crossorigin="anonymous"></script>
@@ -14,36 +13,36 @@
   <link rel="stylesheet" href="styles.css">
 </head>
 
-<header class="sticky-top">
-  <nav class="navbar navbar-default">
-    <div class="navbar-header">
-      <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar-collapse-1">
-        <span class="sr-only"></span>
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span>
-      </button>
-      <a class="navbar-brand" style="color: white; background-color: rgb(30, 8, 153); font-size: 32px; margin-left: 25px" >Jonathan Rein</a>
-    </div>
+<body style="background-color: rgb(228, 220, 220); font-family:'Quicksand', sans-serif;">
+  <header class="sticky-top">
+    <nav class="navbar navbar-default">
+      <div class="navbar-header">
+        <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar-collapse-1">
+          <span class="sr-only"></span>
+          <span class="icon-bar"></span>
+          <span class="icon-bar"></span>
+          <span class="icon-bar"></span>
+        </button>
+        <a class="navbar-brand" style="color: white; background-color: rgb(30, 8, 153); font-size: 32px; margin-left: 25px" >Jonathan Rein</a>
+      </div>
 
-    <div class="collapse navbar-collapse" id="navbar-collapse-1">
-      <ul class="nav navbar-nav navbar-right">
-        <li class="nav-item">
-          <a class="nav-link" href="#about-me">About Me</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="#work">Work</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="#contact-me">Contact</a>
-        </li> 
-      </ul>
-    </div>       
-  </nav>
-</header>
+      <div class="collapse navbar-collapse" id="navbar-collapse-1">
+        <ul class="nav navbar-nav navbar-right">
+          <li class="nav-item">
+            <a class="nav-link" href="#about-me">About Me</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#work">Work</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#contact-me">Contact</a>
+          </li> 
+        </ul>
+      </div>       
+    </nav>
+  </header>
 
-<content style="margin-top:10px">
-  <body style="background-color: rgb(228, 220, 220); font-family:'Quicksand', sans-serif;">
+  <content style="margin-top:10px">
     <div class="container" style="margin-left: 15px;">
       <!--row 1-->
       <div id="about-me" class="row">
@@ -51,8 +50,8 @@
               <h3>About Me</h3>
           </div>
               <div class="col-md-5" >
-                  <h5>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Consequuntur nam neque odit esse ratione excepturi fugit quod vitae numquam, nesciunt dolor, ducimus hic ad et quis architecto. Pariatur, reiciendis tempora?</h5>
-                  <h5>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Consequuntur nam neque odit esse ratione excepturi fugit quod vitae numquam, nesciunt dolor, ducimus hic ad et quis architecto. Pariatur, reiciendis tempora?</h5>
+                  <h5>I'm currently studying Full-Stack Web Development through Georgia Tech Professional Education.</h5>
+                  <h5>Check out some of my work below.</h5>
                 </div>
           <div class="col-md-5">
               <img src="assets\Family2.png" class="images" alt="family picture">
@@ -86,9 +85,9 @@
         <div class="col-md-2">
         </div>
           <div class="col-md-5">
-            <h4>Work Day Scheduler</h4>
+            <h4>Workday Scheduler</h4>
             <a href="https://xr7tsi.github.io/Work-Day-Scheduler/">
-              <img src="assets\Work-Day-Scheduler-Resize-350x.png" class="images" alt="WorkDay Scheduler website image">
+              <img src="assets\Work-Day-Scheduler-Resize-350x.png" class="images" alt="Workday Scheduler website image">
             </a>
         </div>
       </div>
@@ -105,10 +104,9 @@
       </div>
 
     </div>
-  </body>
-</content>
+  </content>
 
-  <footer class="navbar navbar-default">
+  <footer class="navbar navbar-default" style="margin-bottom: 0px;">
     <div class="navbar-header">
       <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar-collapse-2">
         <span class="sr-only"></span>
@@ -137,6 +135,7 @@
       </div>
     </div>       
   </footer>
+</body>
 
 </html>
 
