Adding resume link.

--- a/index.html
+++ b/index.html
@@ -129,6 +129,9 @@
           <a class="nav-link" href="https://www.linkedin.com/in/jonathan-rein"><h5>Linkedin</h5></a>
         </li>
         <li class="nav-item">
+          <a class="nav-link" href="https://xr7tsi.github.io/Resume/"><h5>Resume</h5></a>
+        </li>
+        <li class="nav-item">
           <a class="nav-link" href="https://www.strava.com/athletes/jonathan_rein"><h5>Strava</h5></a>
         </li>
         </ul>
@@ -138,4 +141,8 @@
 </body>
 
 </html>
+
+
+
+
 
