Adding autodialer and phone nuber to foolter.

--- a/index.html
+++ b/index.html
@@ -123,6 +123,9 @@
           <a class="nav-link" href="mailto: jrein1296@gmail.com"><h5>jrein1296@gmail.com</h5></a>
         </li>
         <li class="nav-item">
+          <a class="nav-link" href="tel:404-667-3545"><h5>404-667-3545</h5></a>
+        </li>
+        <li class="nav-item">
           <a class="nav-link" href="https://github.com/Xr7TSi"><h5>GitHub</h5></a>
         </li>
         <li class="nav-item">
