--- a/index.html
+++ b/index.html
@@ -62,22 +62,28 @@
         <div class="col-md-2">
           <h3>Work</h3>
         </div>
-          <div class="col-md-5">
-            <h4>News Flash</h4>
-            <a href="https://xr7tsi.github.io/News-Flash/">
-              <img src="assets\News-Flash-350x.png" class="images" alt="NewsFlash website image">
-            </a>
+            <div class="col-md-5">
+              <a href="https://xr7tsi.github.io/News-Flash/">
+                <img src="assets\News-Flash-350x.png" class="images" alt="NewsFlash website image">
+              </a>
+              <h4>
+              <a class="link-text" href="https://github.com/Xr7TSi/News-Flash">News Flash Github Repository</a>
+            </h4>
         </div>
       </div>
+
+    
 
       <div class="row">
         <div class="col-md-2">
         </div>
         <div class="col-md-5">
-          <h4>Weather Dashboard</h4>
           <a href="https://xr7tsi.github.io/Weather-Dashboard/">
             <img src="assets\Weather-Dashboard-Resize-350x.png" class="images" alt="Weather Dashboard website image">
           </a>
+          <h4>
+            <a class="link-text" href="https://github.com/Xr7TSi/Weather-Dashboard">Weather Dashboard Github Repository</a>
+          </h4>
         </div>
       </div>
     
@@ -85,10 +91,12 @@
         <div class="col-md-2">
         </div>
           <div class="col-md-5">
-            <h4>Workday Scheduler</h4>
             <a href="https://xr7tsi.github.io/Work-Day-Scheduler/">
               <img src="assets\Work-Day-Scheduler-Resize-350x.png" class="images" alt="Workday Scheduler website image">
             </a>
+            <h4>
+              <a class="link-text" href="https://github.com/Xr7TSi/Workday-Scheduler">Workday Scheduler Github Repository</a>
+            </h4>
         </div>
       </div>
 
@@ -96,10 +104,12 @@
         <div class="col-md-2">
         </div>
         <div class="col-md-5">
-          <h4>Password Generator</h4>
           <a href="https://xr7tsi.github.io/Password-Generator/">
             <img src="assets\Password-Generator-Resize-350x.png" class="images" alt="Password Generator website image">
           </a>
+          <h4>
+            <a class="link-text" href="https://github.com/Xr7TSi/Password-Generator">Password Generator Github Repository</a>
+          </h4>
         </div>
       </div>
 
