Correcting link issue for Workday Scheduler.

--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
         <div class="col-md-2">
         </div>
           <div class="col-md-5">
-            <a href="https://xr7tsi.github.io/Work-Day-Scheduler/">
+            <a href="https://xr7tsi.github.io/Workday-Scheduler/">
               <img src="assets\Work-Day-Scheduler-Resize-350x.png" class="images" alt="Workday Scheduler website image">
             </a>
             <h4>
