Updating resume link to google docs.

--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
           <a class="nav-link" href="https://www.linkedin.com/in/jonathan-rein"><h5>Linkedin</h5></a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="https://xr7tsi.github.io/Resume/"><h5>Resume</h5></a>
+          <a class="nav-link" href="https://docs.google.com/document/d/e/2PACX-1vQNIXOZBbExarlcZ2Bx8j77IGd1GlLuicBgRYirct5Ru1CEIHU57YNGps_HXoIj_IOZ6AWQYV1ZtuSm/pub"><h5>Resume</h5></a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="https://www.strava.com/athletes/jonathan_rein"><h5>Strava</h5></a>
