Changing body font, text color on buttons.

--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"
   integrity="sha384-aJ21OjlMXNL5UyIl/XNwTMqvzeRMZH2w8c5cRVpzpU8Y5bApTppSuUkhZXN0VxHd"
   crossorigin="anonymous"></script>
-  <link href="https://fonts.googleapis.com/css2?family=Quicksand&display=swap" rel="stylesheet">
+  <link rel="preconnect" href="https://fonts.gstatic.com">
+<link href="https://fonts.googleapis.com/css2?family=Source+Sans+Pro:wght@600&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="styles.css">
 </head>
 
@@ -27,7 +28,7 @@
       </div>
 
       <div class="collapse navbar-collapse" id="navbar-collapse-1">
-        <ul class="nav navbar-nav navbar-right">
+        <ul class="nav navbar-nav navbar-left">
           <li class="nav-item">
             <a class="nav-link" href="#about-me">About Me</a>
           </li>
@@ -44,16 +45,13 @@
 
   <content style="margin-top:10px">
     <div class="container" style="margin-left: 15px;">
-      <div id="about-me" class="row section-border">
-          
-              <div class="col-md-12 blocktext120" >
-                  <h3>I'm Jonathan.  I develop full-stack web applications.</h3>
-                  <h4>Check out some of my work below.</h4>
-                </div>
-         
+      <div id="about-me" class="row section-border">  
+        <div class="col-md-12 blocktext120" >
+            <h3>I'm Jonathan.  I develop full-stack web applications.</h3>
+            <h4>Check out some of my work below.</h4>
+        </div>
       </div>
   
-
       <div class="row section-border">
         <div class="col-md-5">
           <a href="https://tick-tock-birthday-clock.herokuapp.com/">
@@ -76,7 +74,6 @@
         </div>
       </div>
 
-
       <div class="row section-border">
         <div class="col-md-5">
           <a href="https://xr7tsi.github.io/News-Flash/">
@@ -94,11 +91,10 @@
             <a class="link-text button" href="https://github.com/Xr7TSi/News-Flash">Visit the News Flash Github Repository</a>
           </h6>
           <h6>
-            <a class="link-text button" href="https://xr7tsi.github.io/News-Flash/">See News Flash deployed Github</a>
+            <a class="link-text button" href="https://xr7tsi.github.io/News-Flash/">See News Flash deployed on Github</a>
           </h6>
         </div>
       </div>
-
 
       <div class="row section-border">
         <div class="col-md-5">
@@ -117,7 +113,7 @@
             <a class="link-text button" href="https://github.com/Xr7TSi/Weather-Dashboard">Visit the Weather Dashboard Github Repository</a>
           </h6>
           <h6>
-            <a class="link-text button" href="https://xr7tsi.github.io/Weather-Dashboard/">See Weather Dashboard deployed Github</a>
+            <a class="link-text button" href="https://xr7tsi.github.io/Weather-Dashboard/">See Weather Dashboard deployed on Github</a>
           </h6>
         </div>
       </div>
@@ -140,11 +136,10 @@
             <a class="link-text button" href="https://github.com/Xr7TSi/Workday-Scheduler">Workday Scheduler Github Repository</a>
           </h6>
           <h6>
-            <a class="link-text button" href="https://xr7tsi.github.io/Workday-Scheduler/">See Workday Scheduler deployed Github</a>
+            <a class="link-text button" href="https://xr7tsi.github.io/Workday-Scheduler/">See Workday Scheduler deployed on Github</a>
           </h6>
         </div>
       </div>
-
 
     </div>
   </content>
@@ -161,7 +156,7 @@
     </div>
     <div id="contact-me">
       <div class="collapse navbar-collapse" id="navbar-collapse-2">
-        <ul class="nav navbar-nav navbar-right">
+        <ul class="nav navbar-nav navbar-left">
         <li class="nav-item">
           <a class="nav-link" href="mailto: jrein1296@gmail.com"><h5>jrein1296@gmail.com</h5></a>
         </li>
