--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   crossorigin="anonymous"></script>
   <link rel="preconnect" href="https://fonts.gstatic.com">
 <link href="https://fonts.googleapis.com/css2?family=Source+Sans+Pro:wght@600&display=swap" rel="stylesheet">
-  <link rel="stylesheet" href="styles.css">
+  <link rel="stylesheet" href="style.css">
 </head>
 
   <body>
@@ -46,7 +46,7 @@
   <content style="margin-top:10px">
     <div class="container" style="margin-left: 15px;">
       <div id="about-me" class="row section-border">  
-        <div class="col-md-12 blocktext120" >
+        <div class="col-md-12" >
             <h3>I'm Jonathan.  I develop full-stack web applications.</h3>
             <h4>Check out some of my work below.</h4>
         </div>
@@ -88,10 +88,10 @@
             News Flash is built with JavaSCript.  It uses APIs, bootstrap and local storage.   
            </h5>
           <h6>
-            <a class="link-text button" href="https://github.com/Xr7TSi/News-Flash">Visit the News Flash Github Repository</a>
+            <a class="button" href="https://github.com/Xr7TSi/News-Flash">Visit the News Flash Github Repository</a>
           </h6>
           <h6>
-            <a class="link-text button" href="https://xr7tsi.github.io/News-Flash/">See News Flash deployed on Github</a>
+            <a class="button" href="https://xr7tsi.github.io/News-Flash/">See News Flash deployed on Github</a>
           </h6>
         </div>
       </div>
@@ -110,10 +110,10 @@
             Weather Dashboard is built with JavaSCript.  It uses APIs, bootstrap and local storage.  
            </h5>
           <h6>
-            <a class="link-text button" href="https://github.com/Xr7TSi/Weather-Dashboard">Visit the Weather Dashboard Github Repository</a>
+            <a class="button" href="https://github.com/Xr7TSi/Weather-Dashboard">Visit the Weather Dashboard Github Repository</a>
           </h6>
           <h6>
-            <a class="link-text button" href="https://xr7tsi.github.io/Weather-Dashboard/">See Weather Dashboard deployed on Github</a>
+            <a class="button" href="https://xr7tsi.github.io/Weather-Dashboard/">See Weather Dashboard deployed on Github</a>
           </h6>
         </div>
       </div>
@@ -133,10 +133,10 @@
             Workday Scheduler is built with JavaScript.  It uses moment.js, bootstrap and local storage.  
            </h5>
           <h6>
-            <a class="link-text button" href="https://github.com/Xr7TSi/Workday-Scheduler">Workday Scheduler Github Repository</a>
+            <a class="button" href="https://github.com/Xr7TSi/Workday-Scheduler">Workday Scheduler Github Repository</a>
           </h6>
           <h6>
-            <a class="link-text button" href="https://xr7tsi.github.io/Workday-Scheduler/">See Workday Scheduler deployed on Github</a>
+            <a class="button" href="https://xr7tsi.github.io/Workday-Scheduler/">See Workday Scheduler deployed on Github</a>
           </h6>
         </div>
       </div>
