Carousel now works.  Images need resizing, text needs to be added.

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
       <div class="row section-border">
         <div class="col-md-5">
           <a href="https://tick-tock-birthday-clock.herokuapp.com/">
-            <img src="assets/Birthday-Clock-400x250.png" class="images" alt="Tick Tock Birthday Clock website image">
+            <img src="assets\work-images\Birthday-Clock-400x250.png" class="images" alt="Tick Tock Birthday Clock website image">
           </a>
         </div>
         <div class="col-md-5 blocktext270">
@@ -77,7 +77,7 @@
       <div class="row section-border">
         <div class="col-md-5">
           <a href="https://xr7tsi.github.io/News-Flash/">
-            <img src="assets\News-Flash-400x250.png" class="images" alt="NewsFlash website image">
+            <img src="assets\work-images\News-Flash-400x250.png" class="images" alt="NewsFlash website image">
           </a>
         </div>
         <div class="col-md-5 blocktext270">
@@ -99,7 +99,7 @@
       <div class="row section-border">
         <div class="col-md-5">
           <a href="https://xr7tsi.github.io/Weather-Dashboard/">
-            <img src="assets\Weather-Dashboard-400x250.png" class="images" alt="Weather Dashboard website image">
+            <img src="assets\work-images\Weather-Dashboard-400x250.png" class="images" alt="Weather Dashboard website image">
           </a>
         </div>
         <div class="col-md-5 blocktext270">
@@ -122,7 +122,7 @@
       <div class="row section-border">
         <div class="col-md-5">
           <a href="https://xr7tsi.github.io/Workday-Scheduler/">
-              <img src="assets\Work-Day-Scheduler-400x250.png" class="images" alt="Workday Scheduler website image">
+              <img src="assets\work-images\Work-Day-Scheduler-400x250.png" class="images" alt="Workday Scheduler website image">
             </a>
         </div>
         <div class="col-md-5 blocktext270">
@@ -143,6 +143,10 @@
 
     </div>
   </content>
+
+  <h6>
+    <a class="button" href="work.html">Work Button</a>
+  </h6>
 
   <footer class="navbar navbar-default" style="margin-bottom: 0px; background-color: rgb(222, 222, 223)">
     <div class="navbar-header">
