--- a/work.temp.html
+++ b/work.temp.html
@@ -15,10 +15,10 @@
 
         <div id="carouselExampleFade" class="carousel slide carousel-fade" data-bs-ride="carousel">
             <div class="carousel-inner">
-              <div class="carousel-item active" data-bs-interval="200">
+              <div class="carousel-item active">
                 <img src="assets\work-images\Birthday-Clock-2000x900.png" class="d-block w-100" alt="Tick Tock Birthday Clock image">
               </div>
-              <div class="carousel-item" data-bs-interval="11000" >
+              <div class="carousel-item">
                 <img src="assets\work-images\Birthday-Clock-2000-900-blur.png" class="d-block w-100" alt="Tick Tock Birthday Clock image">
                 <div class="carousel-caption d-none d-md-block">
                   <div class="col-md-12 blocktext270">
@@ -38,15 +38,10 @@
                 </div>
               </div>
 
-              <!-- provides period of no image between slides to avoid cross-fade of different apps -->
-              <div class="carousel-item" data-bs-interval="100">
-                <img  class="d-block w-100" >
-              </div>
-
-              <div class="carousel-item" data-bs-interval="200">
+              <div class="carousel-item">
                 <img src="assets\work-images\News-Flash-2000x900.png" class="d-block w-100" alt="News Flash image">
               </div>
-              <div class="carousel-item" data-bs-interval="11000">
+              <div class="carousel-item">
                 <img src="assets\work-images\News-Flash-2000x900-blur.png" class="d-block w-100" alt="News Flash image">
                 <div class="carousel-caption d-none d-md-block">
                   <div class="col-md-12 blocktext270">
@@ -65,16 +60,10 @@
                   </div>
                 </div>
               </div>
-
-              <!-- provides period of no image between slides to avoid cross-fade of different apps -->
-              <div class="carousel-item" data-bs-interval="100">
-              <img  class="d-block w-100" >
-              </div>
-
-              <div class="carousel-item" data-bs-interval="200">
+              <div class="carousel-item">
                 <img src="assets\work-images\Weather-Dashboard-2000x900.png" class="d-block w-100" alt="Weather Dashboard image">
               </div>
-              <div class="carousel-item" data-bs-interval="11000">
+              <div class="carousel-item">
                 <img src="assets\work-images\Weather-Dashboard-2000x900-blur.png" class="d-block w-100" alt="Weather Dashboard image">
                 <div class="carousel-caption d-none d-md-block">
                   <div class="col-md-12 blocktext270">
@@ -93,16 +82,10 @@
                   </div>
                 </div>
               </div>
-
-                <!-- provides period of no image between slides to avoid cross-fade of different apps -->
-              <div class="carousel-item" data-bs-interval="100">
-              <img  class="d-block w-100" >
-              </div>
-
-              <div class="carousel-item" data-bs-interval="200">
+              <div class="carousel-item">
                 <img src="assets\work-images\Work-Day-Scheduler-2000x900.png" class="d-block w-100" alt="Workday Scheduler image">
               </div>
-              <div class="carousel-item" data-bs-interval="11000">
+              <div class="carousel-item">
                 <img src="assets\work-images\Work-Day-Scheduler-2000x900-blur.png" class="d-block w-100" alt="Workday Scheduler image">
                 <div class="carousel-caption d-none d-md-block">
                   <div class="col-md-12 blocktext270">
@@ -121,12 +104,6 @@
                   </div>
                 </div>
               </div>
-
-              <!-- provides period of no image between slides to avoid cross-fade of different apps -->
-              <div class="carousel-item" data-bs-interval="100">
-              <img  class="d-block w-100" >
-              </div>
-
             </div>
             <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleFade" data-bs-slide="prev">
               <span class="carousel-control-prev-icon" aria-hidden="true"></span>
